--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     <description>Spring Boot Lab Project</description>
     <properties>
         <java.version>21</java.version>
+        <commons.io.version>2.20.0</commons.io.version>
+        <commons.csv.version>1.14.1</commons.csv.version>
+        <commons.lang3.version>3.20.0</commons.lang3.version>
     </properties>
     <dependencies>
         <!-- ================ Spring Boot 核心依賴 ================ -->
@@ -54,17 +57,17 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.20.0</version>
+            <version>${commons.io.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
-            <version>1.14.1</version>
+            <version>${commons.csv.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.20.0</version>
+            <version>${commons.lang3.version}</version>
         </dependency>
 
         <!-- ================ 編譯時依賴 ================ -->
