refactor(static): 將靜態資源移至 docs/ 目錄
- 將所有靜態資源從 `src/main/resources/static/` 遷移至 `docs/`。
- 更新 `WebConfig` 以直接從 `docs/` 目錄提供靜態內容服務。
- 修改 `application.yml` 中的 OpenData 輸出路徑為 `docs/opendata/holiday`。
- 更新 `auto-update.ps1` 及專案文件以反映路徑變更。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,4 +13,4 @@ spring:
 opendata:
   holiday:
     url: https://data.ntpc.gov.tw/api/datasets/308dcd75-6434-45bc-a95f-584da4fed251/csv/file
-    output-dir: src/main/resources/static/opendata/holiday
+    output-dir: docs/opendata/holiday
