ci(gh-pages): 修正 workflow 警告，補上 deployment id
在 'Deploy to GitHub Pages' 步驟中補上遺漏的 'id: deployment'，以確保 environment.url 能正確讀取 'steps.deployment.outputs.page_url'。

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -42,4 +42,5 @@ jobs:
           path: "./docs"
 
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
