--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,5 +12,6 @@ spring:
 
 opendata:
   holiday:
-    url: https://data.ntpc.gov.tw/api/datasets/308dcd75-6434-45bc-a95f-584da4fed251/csv/file
+    # url: https://data.ntpc.gov.tw/api/datasets/308dcd75-6434-45bc-a95f-584da4fed251/csv/file
+    url: https://data.taipei/api/frontstage/tpeod/dataset/resource.download?rid=0dcbcfcf-f7a1-4664-a810-82c01cb524e0
     output-dir: docs/opendata/holiday
