refactor(core): move static resources to src/main/resources/static
Migrate from non-standard docs/ directory to Spring Boot standard static resources location.
- Move all files from docs/ to src/main/resources/static/
- Update application.yml to point output-dir to new location
- Remove WebConfig.java as it is no longer needed
- Update GitHub Actions workflows and local scripts to use new path
- Update documentation (README, spec, GEMINI.md)

--- a/.github/workflows/update-holiday-data.yml
+++ b/.github/workflows/update-holiday-data.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Check for changes and Commit
         run: |
-          # 檢查 docs/opendata/holiday/ 目錄下是否有變更
-          if [ -z "$(git status --porcelain docs/opendata/holiday/)" ]; then
+          # 檢查 src/main/resources/static/opendata/holiday/ 目錄下是否有變更
+          if [ -z "$(git status --porcelain src/main/resources/static/opendata/holiday/)" ]; then
             echo "✨ 未偵測到變更。跳過提交。"
             exit 0
           fi
@@ -49,7 +49,7 @@ jobs:
           git config --global user.email "${{ env.GIT_USER_EMAIL }}"
 
           echo "➕ 正在暫存檔案..."
-          git add docs/opendata/holiday/*.json
+          git add src/main/resources/static/opendata/holiday/*.json
 
           echo "💾 正在提交..."
           # 取得當前日期
