--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -9,7 +9,7 @@ on:
         branches:
             - main
         paths:
-            - "docs/**"
+            - "src/main/resources/static/**"
 
 permissions:
     contents: read
@@ -39,7 +39,7 @@ jobs:
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
-                  path: "./docs" # 指定 docs 資料夾為發佈目錄
+                  path: "./src/main/resources/static" # 指定 static 資料夾為發佈目錄
 
             # 第四步：部署到 GitHub Pages
             - name: Deploy to GitHub Pages
