--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,21 @@
             <version>${commons.lang3.version}</version>
         </dependency>
 
+        <!-- Resend Email -->
+        <dependency>
+            <groupId>com.resend</groupId>
+            <artifactId>resend-java</artifactId>
+            <version>4.11.0</version>
+        </dependency>
+
+        <!-- Dotenv -->
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- PDF Generation -->
         <dependency>
             <groupId>com.openhtmltopdf</groupId>
