ci(github workflows): 調整自動部署觸發條件
- 移除自動部署對特定路徑的監聽以避免不必要的部署
- 保留手動部署的 workflow_dispatch 觸發器

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -5,11 +5,11 @@ on:
     workflow_dispatch:
 
     # 自動部署 (僅 docs/ 目錄)
-    push:
-        branches:
-            - main
-        paths:
-            - "src/main/resources/static/**"
+    # push:
+    #     branches:
+    #         - main
+    #     paths:
+    #         - "src/main/resources/static/**"
 
 permissions:
     contents: read
